# audio-widgets

./: Cargo.toml  README.md
examples/ensemble/: Cargo.toml  Dockerfile  Makefile.toml  docker-compose.yml  update.sh
examples/ensemble/pkg/: eq.css  fader.css  index.html  scales.css  style.css
examples/ensemble/src/: ensemble.rs  lib.rs  nav_bar.rs  utils.rs
examples/ensemble/src/views/: channel_strip_view.rs  compressor_view.rs  eq_view.rs  expander_view.rs  fader_view.rs  home_view.rs  meter_view.rs  mod.rs  slider_view.rs
src/: js_utils.rs  lib.rs  utils.rs  yew_utils.rs
src/eq/: common.rs  eq.css  js.rs  mod.rs  plotter.rs  yew.rs  yew_component.rs  yew_component_graphic.rs  yew_component_param.rs
src/fader/: common.rs  js.rs  mod.rs  yew_component.rs
src/meter/: common.rs  js.rs  mod.rs  yew_component.rs
src/scale/: common.rs  js.rs  mod.rs  plotter.rs  yew_component.rs
