[package]
name = "audio-widgets"
version = "0.1.0"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[features]
JS = ["wasm-bindgen", "js-sys", "web-sys"]
Yew = ["yew", "JS"]

[dependencies]

scales = { path = "../scales" }

wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "CssStyleDeclaration",
    "DomRect",
    "TouchEvent",
    "TouchList",
    "Touch"
]}
yew = { version = "0.17", optional = true }