[package]
name = "audio-widgets"
version = "0.1.1"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
edition = "2018"
description = "A collection of audio related UI widgets for Rust."
repository = "https://github.com/bbmsoft/audio-widgets.git"
license = "MIT OR Apache-2.0"
keywords = ["audio", "widgets", "gui"]
categories = ["gui"]
homepage = "https://github.com/bbmsoft/audio-widgets"

[badges]
travis-ci = { repository = "https://github.com/bbmsoft/audio-widgets.git", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["js", "yew-components"]
js = ["wasm-bindgen", "js-sys", "web-sys"]
yew-components = ["yew", "js"]

[dependencies]
scales = "^0.1.3"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "CssStyleDeclaration",
    "DomRect",
    "TouchEvent",
    "TouchList",
    "Touch"
]}
yew = { version = "0.17", optional = true }