[package]
name = "ensemble"
version = "0.1.0"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = "0.17.4"
scales = "0.1.3"
audio-widgets = { path = "../../" }
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4.19"
log = "0.4.11"
console_log = "0.2.0"